partially fixed dropdown overlap issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,6 +31,7 @@ header .container {
   justify-content: space-between;
   color: #ea5455;
   position: relative;
+  z-index: 10000;
 }
 
 /* footer */
@@ -68,6 +69,18 @@ footer a {
 }
 
 /* dropdown menu */
+.dropdown-menu-behind {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+  padding: 8px;
+  font-size: 1em;
+  position: relative;
+  z-index: 100; /* ensure dropdown appears above other content */
+  cursor: pointer;
+}
+
 .dropdown-menu {
   background-color: white;
   border: 1px solid #ddd;
@@ -75,9 +88,9 @@ footer a {
   box-shadow: 0 1px 2px rgba(0,0,0,0.1);
   padding: 8px;
   font-size: 1em;
+  position: relative;
   z-index: 10000; /* ensure dropdown appears above other content */
   cursor: pointer;
-  position: relative;
 }
 
 .searchbar {
